fix: ⚡️ gaps on mobile

--- a/src/pages/profile/index.module.scss
+++ b/src/pages/profile/index.module.scss
@@ -30,6 +30,7 @@
     justify-self: end;
   }
   .socials {
+    display: flex;
     margin-top: 8px;
   }
   @include respond-to('desktop') {
